assets/css/main.css
/* ... */
.say .say__content .say__content__item .item__text p {
  font-weight: 500;
  color: #9c9a9a;
  line-height: 1.5;
  margin-top: 25px;
}

.blog {
  margin: 60px 0 40px 0;
}

@media only screen and (max-width: 800px) {
  .blog {
    margin: 35px 0;
  }
}

.blog .blog__content {
  max-width: 1200px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 40px auto;
}

@media only screen and (max-width: 800px) {
  .blog .blog__content {
    display: block;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
}

.blog .blog__content .blog__content__item {
  width: calc(1200px/3);
  padding: 15px;
}

@media only screen and (max-width: 800px) {
  .blog .blog__content .blog__content__item {
    margin: auto;
    padding: 0;
    max-width: 90%;
  }
}

.blog .blog__content .blog__content__item .item__img {
  position: relative;
  text-align: center;
  margin: 20px 0;
  overflow: hidden;
}

.blog .blog__content .blog__content__item .item__img img {
  -webkit-transition: 0.4s;
  transition: 0.4s;
  cursor: pointer;
}

.blog .blog__content .blog__content__item .item__img img:hover {
  -webkit-transform: scale(1.05);
          transform: scale(1.05);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

@media only screen and (max-width: 800px) {
  .blog .blog__content .blog__content__item .item__img {
    margin: 10px 0;
  }
}

.blog .blog__content .blog__content__item .item__img .item__img-abs {
  position: absolute;
  z-index: 2;
  bottom: 4%;
  left: -3%;
  background-color: #54fad4;
  width: 60px;
  height: 70px;
  color: #fff;
  padding: 15px 0;
}

@media only screen and (max-width: 1200px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs {
    width: 50px;
    height: 60px;
    padding: 10px 0;
  }
}

@media only screen and (max-width: 1000px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs {
    width: 40px;
    height: 50px;
    padding: 10px 0;
  }
}

.blog .blog__content .blog__content__item .item__img .item__img-abs span {
  font-family: 'Montserrat', sans-serif;
  font-size: 25px;
  font-weight: bold;
}

@media only screen and (max-width: 1200px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs span {
    font-size: 22px;
  }
}

@media only screen and (max-width: 1000px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs span {
    font-size: 20px;
  }
}

.blog .blog__content .blog__content__item .item__img .item__img-abs p {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-style: italic;
  font-size: 13px;
  line-height: 1;
}

@media only screen and (max-width: 1200px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs p {
    font-size: 11px;
  }
}

@media only screen and (max-width: 1000px) {
  .blog .blog__content .blog__content__item .item__img .item__img-abs p {
    font-size: 9px;
  }
}

.blog .blog__content .blog__content__item .item__text p {
  font-family: 'Roboto', sans-serif;
  font-size: 15px;
  font-weight: 400;
  color: #9c9a9a;
  margin: 20px 0;
}

@media only screen and (max-width: 800px) {
  .blog .blog__content .blog__content__item .item__text p {
    margin: 5px 0;
  }
}

.blog .blog__content .blog__content__item .item__text a {
  color: #9c9a9a;
  padding: 15px 0;
  margin-right: 15px;
  outline: none;
  text-decoration: none;
}

.blog .blog__content .blog__content__item .item__text a:hover {
  color: #000;
}

.blog .blog__content .blog__content__item .item__text > span {
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.blog .blog__content .blog__content__item .item__text > span:hover {
  color: #FCE38A;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

@media only screen and (max-width: 800px) {
  .blog .blog__content .blog__content__item .item__text > span {
    font-size: 13px;
  }
}

.blog .blog__content .blog__content__item .item__text .item__text__icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #cccccc;
}

.blog .blog__content .blog__content__item .item__text .item__text__icon i {
  color: #54fad4;
  margin-right: 5px;
}

.footer {
  font-family: 'Montserrat', sans-serif;
}

.footer .title {
  font-weight: 500;
  margin-bottom: 40px;
}

@media only screen and (max-width: 1200px) {
  .footer .title {
    margin-bottom: 25px;
  }
}

.footer .footer__light-italic {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-style: italic;
}

.footer .footer--gray {
  color: #a4a4a4;
}

.footer .footer__map {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  background-image: url("/assets/img/map.png");
  height: 200px;
  width: 100%;
  display: block;
  background-size: cover;
  color: #ee7676;
}

.footer .footer__map .footer__map--icon {
  font-size: 20px;
  padding: 60px 0 0 0;
}

.footer .footer__map .footer__map--text {
  font-weight: bold;
  text-transform: uppercase;
  font-size: 25px;
  position: relative;
  z-index: 1;
  padding: 20px;
  cursor: context-menu;
}

.footer .footer__map .footer__map--text ::after {
  content: "";
  position: absolute;
  width: 50px;
  border-bottom: 3px solid;
  left: 50%;
  bottom: 0;
  margin: 0 0 0 -23px;
}

.footer .footer__content {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  max-width: 1200px;
  margin: 0 auto;
  padding: 75px 0 70px 0;
  border-bottom: 1px solid;
}

@media only screen and (max-width: 1000px) {
  .footer .footer__content {
    display: block;
    padding: 45px 0 40px 0;
  }
}
/* ... */

